--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/next-runtime": "^5.0.0-alpha.25",
+    "@netlify/plugin-nextjs": "^5.12.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
